2003-07-29 Damien Sandras  <dsandras@seconix.com>

	* src/toolbar.cpp: Added tooltip to the connect button.
	
2003-07-21 Hasbullah Bin Pit <sebol@ikhlas.com>
	
        * configure.in: Added 'ms' (Malay) to ALL_LINGUAS.

2003-07-16  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: s/0xa0/ /g

2003-06-27 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Higher granularity for gdk_threads_enter/leave to
	prevent possible deadlocks.
	
2003-06-25 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Do not retry when contacting the ILS server fails.
	Only retry when it is able to contact, but unable to fetch the
	users list.
	
2003-06-22 Damien Sandras  <dsandras@seconix.com>

	* Tagged for 0.98.0 : v_0_98_0
	
2003-06-22 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp, src/config.cpp: Do not use anymore 
	FindConnectionWithLocks as it seems to deadlock.
	
	* src/main_window.cpp: Fixed lost packets and late packets % 
	calculation.
	
2003-06-22 Damien Sandras  <dsandras@seconix.com>
	
	* src/chat_window.cpp: Do not send empty messages.
	
	* src/ldap_window.cpp: Update menu sensitivity on groups listing
	rebuild.

	* src/main_window.cpp: Fixed lost/late packets percentage.
	
2003-06-22 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp, src/ldap_window.h, src/tools.cpp: Moved some
	static functions on contacts to global functions so that they can
	be used in src/tools.cpp. Added right-click menu support in the 
	history.

	* configure.in: Incremented version to 0.98.0 (yes!).
	
2003-06-22 Damien Sandras  <dsandras@seconix.com>

	* src/gnomemeeting.cpp: Fixed tray_hack so that not the whole GM
	is shown.
	
	* src/ldap_window.cpp: Fixed drag and drop from the calls history
	to the addressbook.
	
	* src/main_window.cpp: Debug output is now going in a file
	in the current directory.
	
2003-06-22 Damien Sandras  <dsandras@seconix.com>

	* src/urlhandler.cpp: Puts the URL in the right place in the history