@@ -1,3 +1,15 @@
+2003-07-30 Damien Sandras  <dsandras@seconix.com>
+
+	* src/chat_window.cpp: Removed clear button. Not really required.
+	
+	* src/endpoint.cpp: Changes relative to the changes to
+	the remote user name.
+
+	* src/main_window.cpp: Tried to be more respectful of HIG spacing 
+	recommendations in all parts of the main window.
+	
+	* src/toolbar.cpp: Removed uneeded space in the vertical toolbar.
+	
 2003-07-29 Damien Sandras  <dsandras@seconix.com>
 
 	* src/toolbar.cpp: Added tooltip to the connect button.
